puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Models/EmailModel.cs.pp
using System.ComponentModel.DataAnnotations;

namespace $rootnamespace$.Models
{
    public partial class EmailModel
    {
        [DataType(DataType.EmailAddress)]
        [Required]
        public string EmailAddress { get; set; }

        public bool IsDefault { get; set; }
    }
}